7th time -- attemtpting to prevent codeblocks from extending too far on mobile

--- a/src/styles/syntaxHighlighting.css
+++ b/src/styles/syntaxHighlighting.css
@@ -6,7 +6,9 @@
  */
 
 /* Code block styles */
-pre {
+pre code {
+  display: inline-block;
+  max-width: 100%;
   overflow-x: auto;
 }
 
